fix nav collapsed style

--- a/src/app/styles/less/delta.less
+++ b/src/app/styles/less/delta.less
@@ -1,3 +1,9 @@
+#collapsed_bt{
+  background: none;
+  .icon-bar {
+    margin-left: 50px;
+  }
+}
 .center {
     margin-left: auto;
     margin-right: auto;
